# TRT-NNScaler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  channel.h  cmd_common.h  image_fpng.cpp  image_io.h  image_wic.cpp  image_wuffs.cpp  infer_engine.h  inference.cpp  inspector.cpp  layers.h  logging.h  logging_trt.h  main.cpp  md_view.h  nn-scaler.h  optimize.cpp  reveal.h  scaler_client.cpp  scaler_server.cpp  scaler_server.proto  scaler_tool.cpp  semaphore.h  timing.h  workers.cpp
cmake/Modules/: FindTensorRT.cmake
nvonnxparser_shim/: LICENSE.txt  libnvonnxparser.so.init.c  libnvonnxparser.so.tramp.S
plugins/: plugin_base.h  resize.cu  utils.h
reformat/: reformat.cpp  reformat.cu  reformat.h  reformat_cuda.h
